# loglit

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: basic.py  configured.py
loglit/: __init__.py  loglit.py
