[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "loglit"
version = "1.0.0"
description = "Lightweight logging for Python. One import, no boilerplate."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{ name = "FMJ" }]
keywords = ["logging", "log", "print", "console", "file"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Logging",
]

[project.urls]
Homepage = "https://github.com/Saecke/loglit"
Issues = "https://github.com/Saecke/loglit/issues"
